<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BA41B2E6"
    tools:context=".signupActivity">

    <ImageView
        android:id="@+id/carBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="114dp"
        android:alpha="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/carbackground" />

    <LinearLayout
        android:id="@+id/SignupLayout"
        android:layout_width="414dp"
        android:layout_height="418dp"
        android:clipToPadding="false"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextTextName"
            android:layout_width="270dp"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:background="?attr/popupMenuBackground"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="270dp"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:background="?attr/popupMenuBackground"
            android:backgroundTint="#FFFFFF"
            android:breakStrategy="simple"
            android:ems="10"
            android:hint="@string/email"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="270dp"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:background="?attr/popupMenuBackground"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="270dp"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:background="?attr/popupMenuBackground"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/phoneNumber"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5" />

        <Button
            android:id="@+id/Submit"
            android:layout_width="129dp"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:backgroundTint="#09425B"
            android:text="@string/submit" />
        <ProgressBar
            android:id = "@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>