<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BA41B2E6"
    tools:context=".BookingActivity">

    <ImageView
        android:id="@+id/carBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="114dp"
        android:alpha="0.5"
        android:forceHasOverlappingRendering="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/carbackground" />

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="606dp"
        android:orientation="vertical"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="24dp">

            <TextView
                android:id="@+id/From"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:text="@string/From"
                android:textSize="24sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/FromText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:fontFamily="sans-serif"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5" />

            <TextView
                android:id="@+id/To"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:text="@string/To"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/ToText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5" />

            <TextView
                android:id="@+id/At"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:text="@string/At"
                android:textSize="24sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/AtText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5" />

            <TextView
                android:id="@+id/dateHeader"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:text="Date"
                android:textSize="24sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/dateText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5" />

            <TextView
                android:id="@+id/driverNameHeader"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:text="Driver Name"
                android:textSize="24sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/driverNameText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5" />

            <TextView
                android:id="@+id/driverPhoneHeader"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:text="Driver Phone"
                android:textSize="24sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/driverPhoneText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:textSize="24sp" />


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="435dp"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:backgroundTint="#09425B"
                android:fontFamily="sans-serif"
                android:text="@string/submit" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20" />

            <TextView
                android:id="@+id/priceText"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="30"
                android:text="@string/initialPayment"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>